--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin :0;
+    padding:0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background:rgb(104, 189, 242);
+    color: rgb(37, 29, 20);
 }
+
+h1 {
+    color: rgb(19, 28, 107);
+    text-align: center;
+    font-style: oblique;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+h2{
+   color:  rgb(37, 29, 20);
+   font-style:italic;
+}
+.catalogue {
+    width:auto;
+    max-width: 1100px;
+    margin: 3% auto;
+    display: grid;
+    gap: 2px;
+}
+.frame {
+    background: rgb(168, 228, 254);
+    border-radius: 2cap;
+    
+    
+    padding: 1rem 2rem;
+    gap: 10px;
+    margin:1%  ;
+}
+
+
+
