--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* This is a single-line comment */
+/* CSS for chap-1 code 
+
 * {
     margin :0;
     padding:0;
@@ -8,6 +11,7 @@ body {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background:rgb(104, 189, 242);
     color: rgb(37, 29, 20);
+    
 }
 
 h1 {
@@ -38,4 +42,63 @@ h2{
 }
 
 
+*/
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    background: #f1f5f8;
+    color: #222;
+  }
+  
+  h1 {
+    color: red;
+  }
+  
+  .bookList {
+    width: 90vw;
+    max-width: 1170px;
+    margin: 5rem auto;
+    display: grid;
+    gap: 5rem;
+  }
+  
+  @media screen and (min-width: 768px) {
+    .bookList {
+      grid-template-columns: repeat(3, 1fr);
+      /* align-items: start; */
+    }
+  }
+  
+  .book {
+    background: #fff;
+    border-radius: 1rem;
+    padding: 1rem 2rem;
+  }
+  
+  .book h1 {
+    margin-top: 0.5rem;
+  }
+  
+  .book h4 {
+    color: #617d98;
+    margin-top: 0.25rem;
+    letter-spacing: 3px;
+    font-size: 0.75rem;
+  }
+  
+  .book p {
+    margin-top: 0.5rem;
+  }
+  .photo{
+    height: 25rem;
+    width: 20rem;
+  }
 
